--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Clear, well-crafted contracts are essential to every business relationship. But too often, businesses must sacrifice speed for quality—or affordability for experience. AI Counsel eliminates that tradeoff, leveraging AI technology with real contract attorney experience to provide transparent pricing and efficient timelines—without compromising quality.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>HOW WE USE AI
+									Initial Contract Analysis: Our AI tools perform rapid preliminary review to identify standard clauses and potential issues
+									Language Enhancement: AI assists in converting complex legal language into clear, concise terms while maintaining legal precision
+									Pattern Recognition: AI analyzes thousands of similar contracts to identify industry standards and potential missing elements
+									Quality Control: AI performs comprehensive checks for consistency, completeness, and standard legal requirements.</p>
 							</article>
 
 						<!-- Work -->
