--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Clear, well-crafted contracts are essential to every business relationship. But too often, businesses must sacrifice speed for quality—or affordability for experience. AI Counsel eliminates that tradeoff, leveraging AI technology with real contract attorney experience to provide transparent pricing and efficient timelines—without compromising quality.</p>
-								<p>HOW WE USE AI
-									Initial Contract Analysis: Our AI tools perform rapid preliminary review to identify standard clauses and potential issues
-									Language Enhancement: AI assists in converting complex legal language into clear, concise terms while maintaining legal precision
-									Pattern Recognition: AI analyzes thousands of similar contracts to identify industry standards and potential missing elements
-									Quality Control: AI performs comprehensive checks for consistency, completeness, and standard legal requirements.</p>
+								<p><b>HOW WE USE AI</b><br>
+									<b>Initial Contract Analysis</b>: Our AI tools perform rapid preliminary review to identify standard clauses and potential issues.<br>
+									<b>Language Enhancement</b>: AI assists in converting complex legal language into clear, concise terms while maintaining legal precision.<br>
+									<b>Pattern Recognition</b>: AI analyzes thousands of similar contracts to identify industry standards and potential missing elements.<br>
+									<b>Quality Control</b>: AI performs comprehensive checks for consistency, completeness, and standard legal requirements.</p>
 							</article>
 
 						<!-- Work -->
