add text to intro

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 									<b>Language Enhancement</b>: AI assists in converting complex legal language into clear, concise terms while maintaining legal precision.<br>
 									<b>Pattern Recognition</b>: AI analyzes thousands of similar contracts to identify industry standards and potential missing elements.<br>
 									<b>Quality Control</b>: AI performs comprehensive checks for consistency, completeness, and standard legal requirements.</p>
+								<p>AI handles routine tasks, allowing attorneys to focus on complex analysis and high-value legal work. This partnership delivers faster results, greater efficiency, and predictable costs—all without sacrificing quality.</p>
 							</article>
 
 						<!-- Work -->
