--- a/index.html
+++ b/index.html
@@ -59,10 +59,14 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Pricing</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p><b>Service Structure</b></p><br>
+									This engagement is offered as a flat-fee service, calculated on a per-page basis. The scope of work is outlined in the Project Scope section.
+								<p><b>Pricing</b><br>
+									[Pricing Structure as typed out in data source].</p>
+								<p><b>Payment Terms</b><br>
+									Full payment is required upfront before work begins. Payment is due upon receipt of the invoice.</p>
 							</article>
 
 						<!-- About -->
