--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 							<article id="work">
 								<h2 class="major">Pricing</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p><b>Service Structure</b></p><br>
-									This engagement is offered as a flat-fee service, calculated on a per-page basis. The scope of work is outlined in the Project Scope section.
+								<p><b>Service Structure</b><br>
+									This engagement is offered as a flat-fee service, calculated on a per-page basis. The scope of work is outlined in the Project Scope section.</p>
 								<p><b>Pricing</b><br>
 									[Pricing Structure as typed out in data source].</p>
 								<p><b>Payment Terms</b><br>
