--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<h2 class="major">Pricing</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p><b>Service Structure</b><br>
-									This engagement is offered as a flat-fee service, calculated on a per-page basis. The scope of work is outlined in the Project Scope section.</p>
+									This engagement is offered as a flat-fee service, calculated on a per-page basis. The scope of work is outlined in the Deliverables section.</p>
 								<p><b>Pricing</b><br>
 									[Pricing Structure as typed out in data source].</p>
 								<p><b>Payment Terms</b><br>
