Next steps section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<p>AI handles routine tasks, allowing attorneys to focus on complex analysis and high-value legal work. This partnership delivers faster results, greater efficiency, and predictable costs—all without sacrificing quality.</p>
 							</article>
 
-						<!-- Work -->
+						<!-- Pricing (fka work) -->
 							<article id="work">
 								<h2 class="major">Pricing</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
@@ -69,7 +69,7 @@
 									Full payment is required upfront before work begins. Payment is due upon receipt of the invoice.</p>
 							</article>
 
-						<!-- About -->
+						<!-- Deliverables (fka about) -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
@@ -106,7 +106,16 @@
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
-
+						<!-- Next Steps -->
+							<article id="nextsteps">
+								<h2 class="major">Next Steps</h2>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<p><b>Proceed with the Project</b><br>
+									If you would like to proceed with this project, click the "Proceed" button below.</p>
+								<p><b>Formal Documents</b><br>
+									After indicating you wish to proceed, you'll be sent the following documents to confirm your engagement: (1) Engagement Agreement; (2) Formal quote; and (3) Invoice.</p>
+								<p><b>Project Initiation</b><br>
+									After we recieve payment and the signed engagement agreement, we'll get to to work!</p>
 						<!-- Elements -->
 							<article id="elements">
 								<h2 class="major">Elements</h2>
