--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="#about">Deliverables</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#nextsteps">Next Steps</a></li>
-								<li><a href="#elements">Elements</a></li>
+								<!--- <li><a href="#elements">Elements</a></li> ---!>
 							</ul>
 						</nav>
 					</header>
@@ -362,7 +362,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; 2025 AI Counsel</p>
 					</footer>
 
 			</div>
