--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="#about">Deliverables</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#nextsteps">Next Steps</a></li>
-								<!--- <li><a href="#elements">Elements</a></li> ---!>
+								<!--- <li><a href="#elements">Elements</a></li> --->
 							</ul>
 						</nav>
 					</header>
@@ -99,12 +99,6 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
 							</article>
 						<!-- Next Steps -->
 							<article id="nextsteps">
@@ -116,6 +110,7 @@
 									After indicating you wish to proceed, you'll be sent the following documents to confirm your engagement: (1) Engagement Agreement; (2) Formal quote; and (3) Invoice.</p>
 								<p><b>Project Initiation</b><br>
 									After we recieve payment and the signed engagement agreement, we'll get to to work!</p>
+							</article>
 						<!-- Elements -->
 							<article id="elements">
 								<h2 class="major">Elements</h2>
