--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+  							<img src="image/3%20-%20Round%203%20-white.png" alt="Company Logo">
 						</div>
 						<div class="content">
 							<div class="inner">
