--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-  							<img src="images/whitelogofull" alt="AI Counsel Logo">
+						<div class="logo">
+							<span class="images/whitelogofull"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
