--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-						<div class="logo">
-							<span class="images/whitelogofull"></span>
+							<span class="icon fa-gem"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
