Comment out Contact

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Proposal for [NAME]</h1>
-								<p>A custom propsal prepared for [CLIENT NAME] prepared by [BRETT SEABLOOM] at <a href="http://www.aicounsel.co">AI Counsel</a>.</p>
+								<p>A custom propsal prepared by Brett Seabloom at <a href="http://www.aicounsel.co">AI Counsel</a>.</p>
 								<p>Issued: [DATE]</p>
 							</div>
 						</div>
@@ -59,7 +59,7 @@
 								<p><b>Service Structure</b><br>
 									This engagement is offered as a flat-fee service, calculated on a per-page basis. The scope of work is outlined in the Deliverables section.</p>
 								<p><b>Pricing</b><br>
-									[Pricing Structure as typed out in data source].</p>
+									[Pricing Structure as typed out in data source.]</p>
 								<p><b>Payment Terms</b><br>
 									Full payment is required upfront before work begins. Payment is due upon receipt of the invoice.</p>
 							</article>
@@ -68,11 +68,11 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>[Deliverables as typed out in data source.]</p>
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
+							<!--<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -94,7 +94,7 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
-							</article>
+							</article>-->
 						<!-- Next Steps -->
 							<article id="nextsteps">
 								<h2 class="major">Next Steps</h2>
