--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Pricing</a></li>
 								<li><a href="#about">Deliverables</a></li>
-								<!--- <li><a href="#contact">Contact</a></li> --->
+								<li><a href="#contact">Contact</a></li>
 								<li><a href="#nextsteps">Next Steps</a></li>
 								<!--- <li><a href="#elements">Elements</a></li> --->
 							</ul>
@@ -72,7 +72,7 @@
 							</article>
 
 						<!-- Contact -->
-							<!--<article id="contact">
+							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -94,7 +94,7 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
-							</article>-->
+							</article>
 						<!-- Next Steps -->
 							<article id="nextsteps">
 								<h2 class="major">Next Steps</h2>
@@ -106,21 +106,6 @@
 								<p><b>Project Initiation</b><br>
 									After we recieve payment and the signed engagement agreement, we'll get to to work!</p>
 							</article>
-
-
-						<div class="content">
-							<div class="inner">
-								<h3>ACCEPT PROPOSAL</h3>
-								<p>A custom propsal prepared by Brett Seabloom at <a href="http://www.aicounsel.co">AI Counsel</a>.</p>
-								<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Primary</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-							</div>
-						</div>
-
-						
 						<!-- Elements -->
 							<article id="elements">
 								<h2 class="major">Elements</h2>
