--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 								<li><a href="#about">Deliverables</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#nextsteps">Next Steps</a></li>
-								<!--- <li><a href="#elements">Elements</a></li> --->
+								<li></li><a href="#elements">Elements</a></li>
 							</ul>
 						</nav>
 					</header>
