--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
 							<article id="work">
 								<h2 class="major">Pricing</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<h4>Alternate</h4>
 									<ul class="alt">								
-										<li><p><b>Service Structure</b><br>
+										<li><h4>Service Structure</h4><br>
 											This engagement is offered as a flat-fee service, calculated on a per-page basis. The scope of work is outlined in the Deliverables section.</p></li>
-										<li><p><b>Pricing</b><br>
+										<li><h4>Price</h4><br>
 											[Pricing Structure as typed out in data source.]</p></li>
-										<li><p><b>Payment Terms</b><br>
+										<li><h4>Payment Terms</h4><br>
 											Full payment is required upfront before work begins. Payment is due upon receipt of the invoice.</p></li>
 									</ul>
 							</article>
