--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 								<h2 class="major">Pricing</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 									<ul class="alt">								
-										<li><h4>Service Structure</h4><br>
+										<li><h4>Service Structure</h4>
 											This engagement is offered as a flat-fee service, calculated on a per-page basis. The scope of work is outlined in the Deliverables section.</p></li>
-										<li><h4>Price</h4><br>
+										<li><h4>Price</h4>
 											[Pricing Structure as typed out in data source.]</p></li>
-										<li><h4>Payment Terms</h4><br>
+										<li><h4>Payment Terms</h4>
 											Full payment is required upfront before work begins. Payment is due upon receipt of the invoice.</p></li>
 									</ul>
 							</article>
