--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE HTML>
+<!--
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Proposal - AI Counsel</title>
@@ -20,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Proposal for [NAME]</h1>
-								<p>A custom propsal prepared by Brett Seabloom at <a href="http://www.aicounsel.co">AI Counsel</a>.</p>
+								<p>A custom propsal prepared for [CLIENT NAME] prepared by [BRETT SEABLOOM] at <a href="http://www.aicounsel.co">AI Counsel</a>.</p>
 								<p>Issued: [DATE]</p>
 							</div>
 						</div>
@@ -31,7 +36,7 @@
 								<li><a href="#about">Deliverables</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="#nextsteps">Next Steps</a></li>
-								<li></li><a href="#elements">Elements</a></li>
+								<!--- <li><a href="#elements">Elements</a></li> --->
 							</ul>
 						</nav>
 					</header>
@@ -56,21 +61,19 @@
 							<article id="work">
 								<h2 class="major">Pricing</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-									<ul class="alt">								
-										<li><h4>Service Structure</h4>
-											This engagement is offered as a flat-fee service, calculated on a per-page basis. The scope of work is outlined in the Deliverables section.</p></li>
-										<li><h4>Price</h4>
-											[Pricing Structure as typed out in data source.]</p></li>
-										<li><h4>Payment Terms</h4>
-											Full payment is required upfront before work begins. Payment is due upon receipt of the invoice.</p></li>
-									</ul>
+								<p><b>Service Structure</b><br>
+									This engagement is offered as a flat-fee service, calculated on a per-page basis. The scope of work is outlined in the Deliverables section.</p>
+								<p><b>Pricing</b><br>
+									[Pricing Structure as typed out in data source].</p>
+								<p><b>Payment Terms</b><br>
+									Full payment is required upfront before work begins. Payment is due upon receipt of the invoice.</p>
 							</article>
 
 						<!-- Deliverables (fka about) -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>[Deliverables as typed out in data source.]</p>
+								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
 							</article>
 
 						<!-- Contact -->
