--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Proposal - AI Counsel</title>
@@ -25,7 +20,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Proposal for [NAME]</h1>
-								<p>A custom propsal prepared for [CLIENT NAME] prepared by [BRETT SEABLOOM] at <a href="http://www.aicounsel.co">AI Counsel</a>.</p>
+								<p>A custom propsal prepared by Brett Seabloom on behalf of <a href="http://www.aicounsel.co">AI Counsel</a>.</p>
 								<p>Issued: [DATE]</p>
 							</div>
 						</div>
