--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<i class="fa-regular fa-paper-plane"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
