--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Proposal - AI Counsel</title>
+		<title>Proposal - Clausewell</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,12 +15,12 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<i class="fa-regular fa-paper-plane"></i>
+							<span class="icon fa-paper-plane"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Proposal for [NAME]</h1>
-								<p>A custom propsal prepared by Brett Seabloom on behalf of <a href="http://www.aicounsel.co">AI Counsel</a>.</p>
+								<p>A custom propsal prepared by Brett Seabloom on behalf of <a href="http://www.clausewell.com">Clausewell</a>.</p>
 								<p>Issued: [DATE]</p>
 							</div>
 						</div>
