--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Clear, well-crafted contracts are essential to every business relationship. But too often, businesses must sacrifice speed for quality—or affordability for experience. AI Counsel eliminates that tradeoff, leveraging AI technology with real contract attorney experience to provide transparent pricing and efficient timelines—without compromising quality.</p>
+								<p>Clear, well-crafted contracts are essential to every business relationship. But too often, businesses must sacrifice speed for quality—or affordability for experience. Clausewell eliminates that tradeoff, leveraging AI technology with real contract attorney experience to provide transparent pricing and efficient timelines—without compromising quality.</p>
 								<p><b>HOW WE USE AI</b><br>
 									<b>Initial Contract Analysis</b>: Our AI tools perform rapid preliminary review to identify standard clauses and potential issues.<br>
 									<b>Language Enhancement</b>: AI assists in converting complex legal language into clear, concise terms while maintaining legal precision.<br>
@@ -105,6 +105,14 @@
 									After indicating you wish to proceed, you'll be sent the following documents to confirm your engagement: (1) Engagement Agreement; (2) Formal quote; and (3) Invoice.</p>
 								<p><b>Project Initiation</b><br>
 									After we recieve payment and the signed engagement agreement, we'll get to to work!</p>
+								<ul class="actions">
+										<li><a href="#" class="button primary">Default</a></li>
+										<li><a href="#" class="button">Default</a></li>
+									</ul>
+									<ul class="actions stacked">
+										<li><a href="#" class="button primary">Default</a></li>
+										<li><a href="#" class="button">Default</a></li>
+									</ul>
 							</article>
 						<!-- Elements -->
 							<article id="elements">
@@ -352,7 +360,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; 2025 AI Counsel</p>
+						<p class="copyright">&copy; 2025 Clausewell</p>
 					</footer>
 
 			</div>
