--- a/index.html
+++ b/index.html
@@ -105,14 +105,8 @@
 									After indicating you wish to proceed, you'll be sent the following documents to confirm your engagement: (1) Engagement Agreement; (2) Formal quote; and (3) Invoice.</p>
 								<p><b>Project Initiation</b><br>
 									After we recieve payment and the signed engagement agreement, we'll get to to work!</p>
-								<ul class="actions">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions stacked">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
+								<li><a href="#" class="button primary">Default</a></li>
+								
 							</article>
 						<!-- Elements -->
 							<article id="elements">
@@ -180,11 +174,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 									<h4>Actions</h4>
 									<ul class="actions">
-										<li><a href="#" class="button primary">Default</a></li>
+										<li><a href="#" class="">Default</a></li>
 										<li><a href="#" class="button">Default</a></li>
 									</ul>
 									<ul class="actions stacked">
-										<li><a href="#" class="button primary">Default</a></li>
+										<li><a href="#" class="">Default</a></li>
 										<li><a href="#" class="button">Default</a></li>
 									</ul>
 								</section>
@@ -287,7 +281,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<section>
 									<h3 class="major">Buttons</h3>
 									<ul class="actions">
-										<li><a href="#" class="button primary">Primary</a></li>
+										<li><a href="#" class="">Primary</a></li>
 										<li><a href="#" class="button">Default</a></li>
 									</ul>
 									<ul class="actions">
@@ -295,11 +289,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<li><a href="#" class="button small">Small</a></li>
 									</ul>
 									<ul class="actions">
-										<li><a href="#" class="button primary icon solid fa-download">Icon</a></li>
+										<li><a href="#" class=" icon solid fa-download">Icon</a></li>
 										<li><a href="#" class="button icon solid fa-download">Icon</a></li>
 									</ul>
 									<ul class="actions">
-										<li><span class="button primary disabled">Disabled</span></li>
+										<li><span class=" disabled">Disabled</span></li>
 										<li><span class="button disabled">Disabled</span></li>
 									</ul>
 								</section>
