--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									After indicating you wish to proceed, you'll be sent the following documents to confirm your engagement: (1) Engagement Agreement; (2) Formal quote; and (3) Invoice.</p>
 								<p><b>Project Initiation</b><br>
 									After we recieve payment and the signed engagement agreement, we'll get to to work!</p>
-								<li><a href="#" class="button primary">Default</a></li>
+								<a href="#" class="button primary">Default</a>
 								
 							</article>
 						<!-- Elements -->
