--- a/index.html
+++ b/index.html
@@ -43,13 +43,10 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Clear, well-crafted contracts are essential to every business relationship. But too often, businesses must sacrifice speed for quality—or affordability for experience. Clausewell eliminates that tradeoff, leveraging AI technology with real contract attorney experience to provide transparent pricing and efficient timelines—without compromising quality.</p>
-								<p><b>HOW WE USE AI</b><br>
-									<b>Initial Contract Analysis</b>: Our AI tools perform rapid preliminary review to identify standard clauses and potential issues.<br>
-									<b>Language Enhancement</b>: AI assists in converting complex legal language into clear, concise terms while maintaining legal precision.<br>
-									<b>Pattern Recognition</b>: AI analyzes thousands of similar contracts to identify industry standards and potential missing elements.<br>
-									<b>Quality Control</b>: AI performs comprehensive checks for consistency, completeness, and standard legal requirements.</p>
-								<p>AI handles routine tasks, allowing attorneys to focus on complex analysis and high-value legal work. This partnership delivers faster results, greater efficiency, and predictable costs—all without sacrificing quality.</p>
+								<p>Hi [NAME],<br>I've completed an overview strategy for your project and have some recommendations to share. Have a look, no pressure. I'm happy to answer any questions you may have. When you're ready to move forward, just click the "Accept" button on the main screen.</p>
+								<p>Brett Seabloom</p>
+								<p>brett@clausewell.com</p>
+								<p>(424) 362-1289</p>
 							</article>
 
 						<!-- Pricing (fka work) -->
