--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>Hi [NAME],<br>I've completed an overview strategy for your project and have some recommendations to share. Have a look, no pressure. I'm happy to answer any questions you may have. When you're ready to move forward, just click the "Accept" button on the main screen.</p>
-								<p>Brett Seabloom</p>
-								<p>brett@clausewell.com</p>
-								<p>(424) 362-1289</p>
+								<p>Brett Seabloom<br>brett@clausewell.com<br>(424) 362-1289</p>
 							</article>
 
 						<!-- Pricing (fka work) -->
